# cmake-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
cmake/: Definitions.cmake  GlobalConfig.cmake  Utils.cmake
cmake/dependencies/: imgui-docking-wrapper.cmake  imgui-wrapper.cmake  tracy.cmake
cmake/presets/: base.json
contents/shaders/: fragment_shader.frag  vertex_shader.vert
src/: main.c  main.cpp
src/core/: camera.cpp  camera.h  camera.hpp  event_handler.cpp  event_handler.h  event_handler.hpp  filesystem.cpp  filesystem.h  filesystem.hpp  renderer.cpp  renderer.h  renderer.hpp  shader.cpp  shader.h  shader.hpp  timing.cpp  timing.h  timing.hpp  types.h  window.cpp  window.h
src/dev_ui/: dev_ui.cpp  dev_ui.h  dev_ui.hpp  embedded_font_roboto_medium.hpp  font_roboto_medium.h
src/utils/: assertions.hpp  backports.h  backports.hpp  helper_macros.hpp  singleton.h  singleton.hpp  texture_utils.cpp  texture_utils.h  texture_utils.hpp
src/utils/internal/: assertions_off.h  assertions_off.hpp  assertions_on.h  assertions_on.hpp
